--- a/vignettes/S01-generate_sim_data.Rmd
+++ b/vignettes/S01-generate_sim_data.Rmd
@@ -16,6 +16,9 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(lextremagam)
+library(tidyr)
+library(dplyr)
+library(ggplot2)
 ```
 
 # Treatment variables 
@@ -24,55 +27,83 @@ Generating the treatment variables.
 Predictor (x) range : 0 to 1, by increments of 0.05 (21 unique predictor values)
 Testing the effect of sample size (n): 21, 42, 63, 84, 105
 
-## Experiment 1: testing the effect of residual error level (signal strength) and sample size on peak detection capacity
-5 different sample sizes, 19 different error levels, and 1000 replicate samples per sample size-error level treatment. Based on a normally distributed curve centered in the range 
+## Experiment 1: testing the effect of sample size (sampling effort) on peak detection capacity
+5 different sample size treatment levels ( n = 21, 42, 63, 84, 105), representing 1, 2, 3, 4, and 5 replicate measures respectively.
 
 ```{r }
 x <- seq(0,1,length = 21)
-n <- c(21, 42, 63, 84, 105)
-dup <- c(1, 2, 3, 4, 5)
 rep <- 1000
 
 # Experiment 1 ####
 func <- "norm"
-error <- seq(0.05, 0.95, by=0.05)
 param <-0.5
+n <- c(21, 42, 63, 84, 105)
+dup <- c(1, 2, 3, 4, 5)
+error <- 0.75 #DOUBLE CHECK
+list_names <- c("n_21", "n_42", "n_63", "n_84", "n_105")
 
-sim_dat_e1 <- list(n_21 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[1],
-                                             error = error,
-                                             x = x),
-                   n_42 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[2],
-                                             error = error,
-                                             x = x),
-                   n_63 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[3],
-                                             error = error,
-                                             x = x),
-                   n_84 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[4],
-                                             error = error,
-                                             x = x),
-                   n_105 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[5],
-                                             error = error,
-                                             x = x))
-
+sim_dat_e1 <- expand_grid(func = func,
+                          param = param,
+                          rep = 1:rep,
+                          error = error,
+                          dup = rep(dup, times= dup),
+                          x = x)
 
 set.seed(1)
-sim_dat_e1 <- lapply(sim_dat_e1, function(x) {
-  x <- x%>%
+sim_dat_e1 <- sim_dat_e1 <- sim_dat_e1%>%
+  dplyr::group_by(func, param, error, rep)%>%
+  dplyr::mutate(sample_id = cur_group_id(), 
+                scenario_id = paste0(func,"_p", param, "_n", dup))%>%
+  dplyr::mutate(y_true_unscaled = dnorm(x, mean = param, sd = 4/20))%>%
+  dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
+  dplyr::mutate(y_true = y_true/max(y_true))%>%
+  dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
+  dplyr::ungroup()
+
+sim_dat_e1_plot <- ggplot(data=filter(sim_dat_e1, rep==1))+
+  geom_point(aes(x=x, y=y, colour=error), size=0.1)+
+  geom_line(aes(x=x, y=y_true))+
+  geom_smooth(aes(x=x, y=y, colour=error))+
+  facet_wrap(~dup)
+sim_dat_e1_plot
+```
+
+
+## Experiment 2: testing the effect of residual error level (signal strength) on peak detection capacity
+19 different error levels, and 1000 replicate samples per error level treatment. Based on a normally distributed curve centered in the range with a standard deviation of .2.
+
+```{r }
+x <- seq(0,1,length = 21)
+rep <- 1000
+
+# Experiment 2 ####
+func <- "norm"
+param <- 0.5
+n <- 63
+dup <- 2
+error <- seq(0.05, 0.95, by=0.05)
+
+sim_dat_e2 <- expand_grid(func = func,
+                          param = param,
+                          rep = 1:rep,
+                          error = error,
+                          dup = rep(dup, times= dup),
+                          x = x)
+
+# sim_dat_e1 <- list()
+# for (i in dup){
+#   sim_dat_e1[[i]] <- expand_grid(func = func,
+#                                  param = param,
+#                                  rep = 1:rep,
+#                                  error = error,
+#                                  dup = 1:dup[i],
+#                                  x = x)
+# }
+# names(sim_dat_e1) <- list_names
+
+set.seed(2)
+sim_dat_e2 <- sim_dat_e2 <- sim_dat_e2%>%
+    group_by(rep)%>%
     dplyr::group_by(func, param, error, rep)%>%
     dplyr::mutate(sample_id = cur_group_id(), 
                   scenario_id = paste0(func,"_p", param, "_e", error))%>%
@@ -82,106 +113,93 @@ sim_dat_e1 <- lapply(sim_dat_e1, function(x) {
     dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
     dplyr::ungroup()
 
-})
+
+sim_dat_e2_plot <- ggplot(data=filter(sim_dat_e2, rep==1))+
+  geom_point(aes(x=x, y=y, colour=error), size=0.2)+
+  geom_line(aes(x=x, y=y_true))
+sim_dat_e2_plot
 ```
-## Experiment 2: curve shape and sample size on peak detection capacity
-5 different sample sizes, 3 different curve shapes (peak width, peak location and skew), each with 19 levels, and 1000 replicate samples per sample curve shape level treatment.
+## Experiment 3: Effect of curve shape and sample size on peak detection capacity
+5 different sample sizes, 3 different curve shapes (peak width, peak location and skew), and 1000 replicate samples per sample curve shape level treatment.
 
 ```{r }
 x <- seq(0,1,length = 21)
 n <- c(21, 42, 63, 84, 105)
 dup <- c(1, 2, 3, 4, 5)
 rep <- 1000
+list_names <- c("n_21", "n_42", "n_63", "n_84", "n_105")
 
-# Experiment 2 ####
-error <- 0.3 ######TO BE CHANGED
+# Experiment 3 ####
+error <- 0.5 ######DOULBE CHECK
 param <- seq(0.05, .95, by= .05)
 
 func <- c("var-p-location", "var-p-skew", "var-p-width")
 
-sim_dat_e2 <- list(n_21 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[1],
-                                             error = error,
-                                             x = x),
-                   n_42 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[2],
-                                             error = error,
-                                             x = x),
-                   n_63 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[3],
-                                             error = error,
-                                             x = x),
-                   n_84 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[4],
-                                             error = error,
-                                             x = x),
-                   n_105 = tidyr::expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[5],
-                                             error = error,
-                                             x = x))
+sim_dat_e3 <- expand_grid(func = func,
+                          param = param,
+                          dup = rep(dup, times= dup),
+                          error = error,
+                          rep = 1:rep,
+                          x = x )
 
+# sim_dat_e2 <- list()
+# for (i in dup){
+#   sim_dat_e2[[i]] <- expand_grid(func = func,
+#                                  param = param,
+#                                  dup = 1:dup[i],
+#                                  error = error,
+#                                  rep = 1:rep,
+#                                  x = x)
+# }
+# names(sim_dat_e2) <- list_names 
 
-set.seed(2)
-sim_dat_e2 <- lapply(sim_dat_e2, function(x) {
-  x <- x%>%
-    dplyr::group_by(func, param, error, rep)%>%
-    dplyr::mutate(sample_id = cur_group_id(), 
-                  scenario_id = paste0(func,"_p", param, "_e", error))%>%
-    dplyr::mutate(y_true_unscaled = dplyr::case_when(func=="var-p-location"~10*dnorm(x,mean = param, sd = 4/20),
-                                                      func=="var-p-skew"~dbeta(x, shape1=10*param, shape2=10*(1-param)),
-                                                      func=="var-p-width"~10*dnorm(x,mean=.5,sd = param^2)))%>% #####DOUBLE CHEKC THIS SCALING
+set.seed(3)
+sim_dat_e3 <- sim_dat_e3%>%
+    dplyr::group_by(func, param, error, rep, dup)%>%
+    dplyr::mutate(sample_id = cur_group_id(),
+                  scenario_id = paste0(func,"_p", param, "_n", dup))%>%
+    dplyr::mutate(y_true_unscaled = case_when(
+      func=="var-p-location"~10*dnorm(x, mean = param, sd = 4/20),
+      func=="var-p-skew"~dbeta(x, shape1=10*param, shape2=10*(1-param)),
+      func=="var-p-width"~10*dnorm(x,mean=.5,sd = param^2)))%>% #####DOUBLE CHEKC THIS SCALING
     dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
     dplyr::mutate(y_true = y_true/max(y_true))%>%
     dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
     dplyr::ungroup()
 
-})
 
-ggplot(data=filter(sim_dat_e2$n_21, rep==1))+
-  geom_point(aes(x=x, y=y, colour=as.factor(param)))+
+
+  
+#   lapply(sim_dat_e2, function(x) {
+#   x <- x%>%
+#     dplyr::group_by(func, param, error, rep)%>%
+#     dplyr::mutate(sample_id = cur_group_id(), 
+#                   scenario_id = paste0(func,"_p", param, "_e", error))%>%
+#     dplyr::mutate(y_true_unscaled = case_when(func=="var-p-location"~10*dnorm(x,mean = param, sd = 4/20),
+#                                               func=="var-p-skew"~dbeta(x, shape1=10*param, shape2=10*(1-param)),
+#                                               func=="var-p-width"~10*dnorm(x,mean=.5,sd = param^2)))%>% #####DOUBLE CHEKC THIS SCALING
+#     dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
+#     dplyr::mutate(y_true = y_true/max(y_true))%>%
+#     dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
+#     dplyr::ungroup()
+# 
+# })
+
+ggplot(data=filter(sim_dat_e3, rep==1, dup==1))+
+  #geom_point(aes(x=x, y=y, colour=as.factor(param)))+
   geom_line(aes(x=x, y=y_true, colour=as.factor(param)))+
-  facet_wrap(~func)
+  facet_grid(dup~func)
 
-ggplot(data=filter(sim_dat_e2$n_21, rep==1, func=="var-p-width"))+
+ggplot(data=filter(sim_dat_e3, rep==1, func=="var-p-width"))+
   geom_point(aes(x=x, y=y, colour=as.factor(param)))+
   geom_line(aes(x=x, y=y_true, colour=as.factor(param)))+
   facet_wrap(~as.factor(param))
 
 
-# reps <- 1000
-#
-# param <- seq(0.05, .95, by= .05)
-#
-# func <- c("var-location", "var-scale", "var-curvature",
-#           "var-p-location", "var-skew", "var-p-width")
-#
-# sim_data <-  tidyr::expand_grid(func = func,
-#                                 param=param,
-#                                 x=x)
-# 
-#
-#
-# sim_data <- dplyr::group_by(sim_data,
-#                             func, param)
-# sim_data <- dplyr::mutate(sim_data,
-#                           y_true_scaled = y_true_unscaled-min(y_true_unscaled))
-# sim_data <- dplyr::mutate(sim_data,
-#                           y_true_scaled = y_true_scaled/max(y_true_scaled))
-# sim_data <- dplyr::ungroup(sim_data,
-#                             func, param)
+
 ```
 
-##Experiment 3: The effect on 
+##Experiment 4: The effect on 
 
 ```{r }
 x <- seq(0,1,length = 21)
@@ -195,31 +213,31 @@ param <- seq(0.05, .95, by= .05)
 
 func <- c("var-location", "var-scale", "var-curvature", "saturating")
 
-sim_dat_e3 <- list(n_21 = tidyr::expand_grid(func = func,
+sim_dat_e3 <- list(n_21 = expand_grid(func = func,
                                              param = param,
                                              rep = 1:rep,
                                              dup = 1:dup[1],
                                              error = error,
                                              x = x),
-                   n_42 = tidyr::expand_grid(func = func,
+                   n_42 = expand_grid(func = func,
                                              param = param,
                                              rep = 1:rep,
                                              dup = 1:dup[2],
                                              error = error,
                                              x = x),
-                   n_63 = tidyr::expand_grid(func = func,
+                   n_63 = expand_grid(func = func,
                                              param = param,
                                              rep = 1:rep,
                                              dup = 1:dup[3],
                                              error = error,
                                              x = x),
-                   n_84 = tidyr::expand_grid(func = func,
+                   n_84 = expand_grid(func = func,
                                              param = param,
                                              rep = 1:rep,
                                              dup = 1:dup[4],
                                              error = error,
                                              x = x),
-                   n_105 = tidyr::expand_grid(func = func,
+                   n_105 = expand_grid(func = func,
                                              param = param,
                                              rep = 1:rep,
                                              dup = 1:dup[5],
@@ -245,12 +263,12 @@ sim_dat_e3 <- lapply(sim_dat_e3, function(x) {
 })
 
 ggplot(data=filter(sim_dat_e3$n_21, rep==1))+
-  geom_point(aes(x=x, y=y, colour=as.factor(param)))+
+  #ggeom_point(aes(x=x, y=y, colour=as.factor(param)))+
   geom_line(aes(x=x, y=y_true, colour=as.factor(param)))+
   facet_wrap(~func)
 
 ggplot(data=filter(sim_dat_e3$n_21, rep==1, func=="var-location"))+
-  geom_point(aes(x=x, y=y, colour=as.factor(param)))+
+ # geom_point(aes(x=x, y=y, colour=as.factor(param)))+
   geom_line(aes(x=x, y=y_true, colour=as.factor(param)))+
   facet_wrap(~as.factor(param))
 
@@ -262,7 +280,7 @@ ggplot(data=filter(sim_dat_e3$n_21, rep==1, func=="var-location"))+
 # func <- c("var-location", "var-scale", "var-curvature",
 #           "var-p-location", "var-skew", "var-p-width")
 #
-# sim_data <-  tidyr::expand_grid(func = func,
+# sim_data <-  expand_grid(func = func,
 #                                 param=param,
 #                                 x=x)
 # 
