--- a/vignettes/S01-generate_sim_data.Rmd
+++ b/vignettes/S01-generate_sim_data.Rmd
@@ -19,6 +19,7 @@ library(lextremagam)
 library(tidyr)
 library(dplyr)
 library(ggplot2)
+library(arrow)
 ```
 
 # Treatment variables 
@@ -35,7 +36,7 @@ x <- seq(0,1,length = 21)
 rep <- 1000
 
 # Experiment 1 ####
-func <- "norm"
+func <- c("norm", "linear")
 param <-0.5
 n <- c(21, 42, 63, 84, 105)
 dup <- c(1, 2, 3, 4, 5)
@@ -51,21 +52,28 @@ sim_dat_e1 <- expand_grid(func = func,
 
 set.seed(1)
 sim_dat_e1 <- sim_dat_e1 <- sim_dat_e1%>%
-  dplyr::group_by(func, param, error, rep)%>%
+  dplyr::group_by(func, param, error, rep, dup)%>%
   dplyr::mutate(sample_id = cur_group_id(), 
-                scenario_id = paste0(func,"_p", param, "_n", dup))%>%
-  dplyr::mutate(y_true_unscaled = dnorm(x, mean = param, sd = 4/20))%>%
+                scenario_id = paste0(func,"_p", param, "_n", dup, "_e", error))%>%
+  dplyr::mutate(y_true_unscaled = case_when(
+    func=="norm"~dnorm(x, mean = param, sd = 4/20),
+    func=="linear"~x))%>%
   dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
   dplyr::mutate(y_true = y_true/max(y_true))%>%
   dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
   dplyr::ungroup()
 
+#Export data to parquet
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+write_parquet(x = sim_dat_e1, "data-raw/sim/data/sim_dat_e1.parquet")
+
 sim_dat_e1_plot <- ggplot(data=filter(sim_dat_e1, rep==1))+
   geom_point(aes(x=x, y=y, colour=error), size=0.1)+
-  geom_line(aes(x=x, y=y_true))+
   geom_smooth(aes(x=x, y=y, colour=error))+
   facet_wrap(~dup)
 sim_dat_e1_plot
+
+
 ```
 
 
@@ -77,7 +85,7 @@ x <- seq(0,1,length = 21)
 rep <- 1000
 
 # Experiment 2 ####
-func <- "norm"
+func <- c("norm", "linear")
 param <- 0.5
 n <- 63
 dup <- 2
@@ -90,28 +98,19 @@ sim_dat_e2 <- expand_grid(func = func,
                           dup = rep(dup, times= dup),
                           x = x)
 
-# sim_dat_e1 <- list()
-# for (i in dup){
-#   sim_dat_e1[[i]] <- expand_grid(func = func,
-#                                  param = param,
-#                                  rep = 1:rep,
-#                                  error = error,
-#                                  dup = 1:dup[i],
-#                                  x = x)
-# }
-# names(sim_dat_e1) <- list_names
-
 set.seed(2)
 sim_dat_e2 <- sim_dat_e2 <- sim_dat_e2%>%
-    group_by(rep)%>%
-    dplyr::group_by(func, param, error, rep)%>%
-    dplyr::mutate(sample_id = cur_group_id(), 
-                  scenario_id = paste0(func,"_p", param, "_e", error))%>%
-    dplyr::mutate(y_true_unscaled = dnorm(x, mean = param, sd = 4/20))%>%
-    dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
-    dplyr::mutate(y_true = y_true/max(y_true))%>%
-    dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
-    dplyr::ungroup()
+  group_by(rep)%>%
+  dplyr::group_by(func, param, error, rep)%>%
+  dplyr::mutate(sample_id = cur_group_id(), 
+                scenario_id = paste0(func,"_p", param, "_n", dup, "_e", error))%>%
+  dplyr::mutate(y_true_unscaled = case_when(
+    func=="norm"~ dnorm(x, mean = param, sd = 4/20),
+    func=="linear"~ x))%>%
+  dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
+  dplyr::mutate(y_true = y_true/max(y_true))%>%
+  dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
+  dplyr::ungroup()
 
 
 sim_dat_e2_plot <- ggplot(data=filter(sim_dat_e2, rep==1))+
@@ -142,48 +141,20 @@ sim_dat_e3 <- expand_grid(func = func,
                           rep = 1:rep,
                           x = x )
 
-# sim_dat_e2 <- list()
-# for (i in dup){
-#   sim_dat_e2[[i]] <- expand_grid(func = func,
-#                                  param = param,
-#                                  dup = 1:dup[i],
-#                                  error = error,
-#                                  rep = 1:rep,
-#                                  x = x)
-# }
-# names(sim_dat_e2) <- list_names 
-
 set.seed(3)
 sim_dat_e3 <- sim_dat_e3%>%
-    dplyr::group_by(func, param, error, rep, dup)%>%
-    dplyr::mutate(sample_id = cur_group_id(),
-                  scenario_id = paste0(func,"_p", param, "_n", dup))%>%
-    dplyr::mutate(y_true_unscaled = case_when(
-      func=="var-p-location"~10*dnorm(x, mean = param, sd = 4/20),
-      func=="var-p-skew"~dbeta(x, shape1=10*param, shape2=10*(1-param)),
-      func=="var-p-width"~10*dnorm(x,mean=.5,sd = param^2)))%>% #####DOUBLE CHEKC THIS SCALING
-    dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
-    dplyr::mutate(y_true = y_true/max(y_true))%>%
-    dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
-    dplyr::ungroup()
-
-
-
-  
-#   lapply(sim_dat_e2, function(x) {
-#   x <- x%>%
-#     dplyr::group_by(func, param, error, rep)%>%
-#     dplyr::mutate(sample_id = cur_group_id(), 
-#                   scenario_id = paste0(func,"_p", param, "_e", error))%>%
-#     dplyr::mutate(y_true_unscaled = case_when(func=="var-p-location"~10*dnorm(x,mean = param, sd = 4/20),
-#                                               func=="var-p-skew"~dbeta(x, shape1=10*param, shape2=10*(1-param)),
-#                                               func=="var-p-width"~10*dnorm(x,mean=.5,sd = param^2)))%>% #####DOUBLE CHEKC THIS SCALING
-#     dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
-#     dplyr::mutate(y_true = y_true/max(y_true))%>%
-#     dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
-#     dplyr::ungroup()
-# 
-# })
+  dplyr::group_by(func, param, error, rep, dup)%>%
+  dplyr::mutate(sample_id = cur_group_id(),
+                scenario_id = paste0(func,"_p", param, "_n", dup, "_e", error))%>%
+  dplyr::mutate(y_true_unscaled = case_when(
+    func=="var-p-location"~10*dnorm(x, mean = param, sd = 4/20),
+    func=="var-p-skew"~dbeta(x, shape1=10*param, shape2=10*(1-param)),
+    func=="var-p-width"~(param/(2*1*(1/(param*10)))*exp(-((abs(pred-0.5)/1)^(param*10)))))) %>%
+  #10*dnorm(x,mean=.5,sd = param^2)))%>% #####DOUBLE CHEKC THIS SCALING
+  dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
+  dplyr::mutate(y_true = y_true/max(y_true))%>%
+  dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
+  dplyr::ungroup()
 
 ggplot(data=filter(sim_dat_e3, rep==1, dup==1))+
   #geom_point(aes(x=x, y=y, colour=as.factor(param)))+
@@ -191,87 +162,88 @@ ggplot(data=filter(sim_dat_e3, rep==1, dup==1))+
   facet_grid(dup~func)
 
 ggplot(data=filter(sim_dat_e3, rep==1, func=="var-p-width"))+
-  geom_point(aes(x=x, y=y, colour=as.factor(param)))+
-  geom_line(aes(x=x, y=y_true, colour=as.factor(param)))+
-  facet_wrap(~as.factor(param))
+  #geom_point(aes(x=x, y=y, colour=as.factor(param)))+
+  geom_line(aes(x=x, y=y_true, colour=as.factor(param)))
+  #facet_wrap(~as.factor(param))
 
 
-
+# 
+# 
+# b <- param*10-0.4
+# 
+# test_gen <- expand_grid(a = a, 
+#                         mu = mu,
+#                         b = b,
+#                         pred = pred)%>%
+#   mutate(resp=b/(2*a*(1/b))*exp(-((abs(pred-mu)/a)^b)))%>%
+#   group_by(a, mu, b)%>%
+#   mutate(resp = resp-min(resp))%>%
+#   mutate(resp = resp/max(resp))%>%
+#     ungroup()
+# 
+# ggplot(data=test_gen)+
+#   geom_line(aes(x = pred, y= resp, colour = as.factor(b)))
+# 
+# b <- 2^(param*2)
+# a <- 1
+# mu <- .5
+# pred <- seq(0,1,length = 21)
+# for (b in b){
+#   resp <- b/(2*a*(1/b))*exp(-((abs(pred-mu)/a)^b)) 
+#   resp <- resp-min(resp)
+#   resp <- resp/(max(resp))
+#   plot(resp~pred)
+# }
 ```
 
-##Experiment 4: The effect on 
+##Experiment 4: The effect of curve shape but for non-peaked curves 
 
 ```{r }
 x <- seq(0,1,length = 21)
 n <- c(21, 42, 63, 84, 105)
 dup <- c(1, 2, 3, 4, 5)
-rep <- 1000
+rep <- 1
 
-# Experiment 3 ####
-error <- 0.3 ######TO BE CHANGED
+# Experiment 4 ####
+error <- 0.7 ######TO BE CHANGED
 param <- seq(0.05, .95, by= .05)
 
-func <- c("var-location", "var-scale", "var-curvature", "saturating")
+func <- c("var-location", "var-scale", "var-curvature")
 
-sim_dat_e3 <- list(n_21 = expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[1],
-                                             error = error,
-                                             x = x),
-                   n_42 = expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[2],
-                                             error = error,
-                                             x = x),
-                   n_63 = expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[3],
-                                             error = error,
-                                             x = x),
-                   n_84 = expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[4],
-                                             error = error,
-                                             x = x),
-                   n_105 = expand_grid(func = func,
-                                             param = param,
-                                             rep = 1:rep,
-                                             dup = 1:dup[5],
-                                             error = error,
-                                             x = x))
+sim_dat_e4 <- expand_grid(func = func,
+                          param = param,
+                          rep = 1:rep,
+                          dup = rep(dup, times=dup),
+                          error = error,
+                          x = x)
 
+set.seed(4)
+sim_dat_e4 <- sim_dat_e4%>%
+  dplyr::group_by(func, param, error, rep)%>%
+  dplyr::mutate(sample_id = cur_group_id(), 
+                scenario_id = paste0(func,"_p", param, "_n", dup, "_e", error))%>%
+  dplyr::mutate(y_true_unscaled = dplyr::case_when(
+    func=="var-location"~plogis(x, location=param, scale = .1),
+    func=="var-scale"~plogis(x, location=0.5, scale = (param)^3),
+    func=="var-curvature"~plogis(x, location=.05, scale = (param)^3)))%>% 
+  dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
+  dplyr::mutate(y_true = y_true/max(y_true))%>%
+  dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
+  dplyr::ungroup()%>%
+  dplyr::filter(func=="var-scale" & param %in% c(.6, .65, .7, .75, .8, .85, .9, .95))
 
-set.seed(3)
-sim_dat_e3 <- lapply(sim_dat_e3, function(x) {
-  x <- x%>%
-    dplyr::group_by(func, param, error, rep)%>%
-    dplyr::mutate(sample_id = cur_group_id(), 
-                  scenario_id = paste0(func,"_p", param, "_e", error))%>%
-    dplyr::mutate(y_true_unscaled = dplyr::case_when(func=="var-location"~plogis(x, location=param, scale = .1),
-                                                      func=="var-scale"~plogis(x, location=0.5, scale = (param*0.7)^2),
-                                                      func=="var-curvature"~plogis(x, location=.05, scale = (param*0.7)^2),
-                                                     func=="saturating"~11*param*x/(1+(11*param-1)*2*x)))%>% #####DOUBLE CHEKC THIS SCALING
-    dplyr::mutate(y_true = y_true_unscaled-min(y_true_unscaled))%>%
-    dplyr::mutate(y_true = y_true/max(y_true))%>%
-    dplyr::mutate(y = y_true + rnorm(n = n(),mean = 0, sd = error))%>%
-    dplyr::ungroup()
-
-})
-
-ggplot(data=filter(sim_dat_e3$n_21, rep==1))+
+ggplot(data=filter(sim_dat_e4, rep==1))+
   #ggeom_point(aes(x=x, y=y, colour=as.factor(param)))+
   geom_line(aes(x=x, y=y_true, colour=as.factor(param)))+
   facet_wrap(~func)
 
-ggplot(data=filter(sim_dat_e3$n_21, rep==1, func=="var-location"))+
+ggplot(data=filter(sim_dat_e4, rep==1, func=="var-location"))+
  # geom_point(aes(x=x, y=y, colour=as.factor(param)))+
   geom_line(aes(x=x, y=y_true, colour=as.factor(param)))+
   facet_wrap(~as.factor(param))
+```
 
+```{r }
 
 # reps <- 1000
 #
