--- a/vignettes/S02-run_sims.Rmd
+++ b/vignettes/S02-run_sims.Rmd
@@ -164,8 +164,9 @@ peak_detect_parallel <- function(sim_data, logname){
 Experiment 1
 ```{r}
 # import data
-setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+setwd("~/lextremagam/lextremagam")
 sim_dat_e1 <- read_parquet(file = "data-raw/sim/data/sim_dat_e1.parquet")
+test_data <- sim_dat_e1%>% filter(rep<=10)
 
 #set number of cores
 my.cluster <- makeCluster(detectCores()-2)
@@ -182,14 +183,16 @@ foreach::getDoParWorkers()
 # Exporting functions necessary for parallel processing within peaktest_all_prll
 #clusterExport(my.cluster, c("peaktest_scam", "peaktest_quad", "peaktest_twolines", "reg2"))
 tic()
-sim_e1_results <- peak_detect_parallel(sim_data = sim_dat_e1, logname = "test_log")
+#sim_e1_results <- peak_detect_parallel(sim_data = sim_dat_e1, logname = "test_log")
+test_results <- peak_detect_parallel(sim_data = test_data, logname = "test_log")
+
 toc()
 
 parallel::stopCluster(cl = my.cluster)
 
-write_parquet(sim_e1_results$peaktest_results, sink =  "data-raw/sim/results/peaktest_results_e1.parquet")
-write_parquet(sim_e1_results$lextrema_results, sink =  "data-raw/sim/results/lextrema_results_e1.parquet")
-write_parquet(sim_e1_results$gam_params, sink =  "data-raw/sim/results/gam_params_e1.parquet")
+# write_parquet(sim_e1_results$peaktest_results, sink =  "data-raw/sim/results/peaktest_results_e1.parquet")
+# write_parquet(sim_e1_results$lextrema_results, sink =  "data-raw/sim/results/lextrema_results_e1.parquet")
+# write_parquet(sim_e1_results$gam_params, sink =  "data-raw/sim/results/gam_params_e1.parquet")
 
 
 ```
