--- a/vignettes/S02-run_sims.Rmd
+++ b/vignettes/S02-run_sims.Rmd
@@ -189,8 +189,138 @@ peak_detect_parallel <- function(sim_data, logname){
   #returing results for all samples in sim_data passed through the function
   return(results_list)
 }
+
+peak_detect_gratia <- function(sim_data, logname){ 
+  sim_data <- sim_data
+  #using the user-defined logname to set up a new parallel processing logging file
+  log_file <- paste0("data-raw/sim/analysis_logs/", logname, ".txt")
+  file.create(log_file)
+  
+  start_time <- as.numeric(Sys.time())
+  
+  #Parallel processing using the sim_data passed in the function
+  sim_dat_detect_results_list <- foreach (i = unique(sim_data$sample_id), #iterating for each ID number
+                                          .packages=c('dplyr', 'R.utils','pracma', "mgcv", "lextremagam", "marginaleffects"))%do% {
+                                            
+#merges list output into a dataframe, where each iteration output is a row
+                                            
+    cat(paste0(Sys.time(), ",Iteration Start,", "Sample ID,", i,  ",Time since foreach loop start,", as.numeric(Sys.time())-start_time, "\n" ), file=log_file, append=TRUE)
+     # selecting only the test data for iteration i ####
+    test_data <- sim_data%>%
+      filter(sample_id==i)
+    x <- test_data$x
+    y <- test_data$y
+   cat(paste0(Sys.time(), "Sample ID,", i,  ",Sample size,", nrow(test_data), ",", length(x), ",", length(y), "\n" ), file=log_file, append=TRUE)
+   
+    #quantify local extrema
+      #fit gam
+      tic()
+              
+      sim_gam <- gam(y ~ s(x, bs="ad", m=3), 
+                           method = "REML", 
+                           data = test_data)
+      
+                    cat(paste0(Sys.time(), 
+                   ",", i, ", Gam ran. Gam object size: ", length(sim_gam), "\n" ),
+        file=log_file, append=TRUE)
+                    
+      summary_sim_gam <- summary(sim_gam)
+      
+    cat(paste0(Sys.time(), 
+                   ",", i, ", Gam summary ran. Gam object size: ", length(summary_sim_gam), "\n" ),
+        file=log_file, append=TRUE)
+    
+      sim_gam_params <- as.data.frame(cbind(i,
+                              sim_gam$aic, 
+                              sim_gam$converged,
+                              sim_gam$outer.info$iter,
+                              summary_sim_gam$residual.df,
+                              summary_sim_gam$chi.sq,
+                              summary_sim_gam$r.sq,
+                              summary_sim_gam$s.table[[4]],#Smooth p-value
+                              summary_sim_gam$edf,    #edf
+                              summary_sim_gam$dev.expl)) #deviance explained) 
+      names(sim_gam_params) <- c("sample_id", "aic", "converged", "n_iter", "residual_df", "chis_sq", "r_sq_adj", "p_smooth", "edf", "dev_expl")
+    
+          cat(paste0(Sys.time(), 
+                   ",", i, ", Params grouped: number of columns", ncol(sim_gam_params), "\n" ),
+        file=log_file, append=TRUE)
+          
+      #Finding lextrema
+      lextrema_summary <- lextremagam::quantify_lextrema(mod = sim_gam,
+                                           var = "x", 
+                                           step_size = 0.0005, 
+                                           conf_level = 0.95, 
+                                           deriv_method = "gratia") #may be too small (a 100 th)
+      
+                cat(paste0(Sys.time(), 
+                   ",", i, ", quantify_lextrema_gratia_ran", length(lextrema_summary), "\n" ),
+        file=log_file, append=TRUE)
+                
+      lextrema_summary$segment_summary$sample_id <- i
+      
+            cat(paste0(Sys.time(), 
+                   ",", i, ", added sample_id ", i , " to lextrema summary.\n" ),
+        file=log_file, append=TRUE)
+            
+      time_lextrema <- toc()
+      
+      cat(paste0(Sys.time(), 
+                 ",lextrema analysis complete,", "Sample ID,", i,  ",Duration of lextrema analysis,", time_lextrema, "\n" ),
+        file=log_file, append=TRUE)
+              
+    results <- list(sample_id = i, 
+                    gam_params = sim_gam_params, 
+                    lextrema_results = lextrema_summary$segment_summary)
+    #returing concatenated analysis results for sample ID=i
+    gc()
+    #saveRDS(results, file = "data-raw/sim/results")
+    return(results)
+  }
+      
+  #rowbinding all lextrema results
+      lextrema_results_list <- map(sim_dat_detect_results_list, ~ .x$lextrema_results)
+      lextrema_results <- do.call(rbind, lextrema_results_list)
+      
+  #rowbinding all gam parameters
+      gam_params_list <- map(sim_dat_detect_results_list, ~ .x$gam_params)
+      gam_params <- do.call(rbind, gam_params_list)
+      
+  results_list <- list(peaktest_results = peaktest_results,
+                       lextrema_results = lextrema_results,
+                       gam_params = gam_params)
+  
+  #returing results for all samples in sim_data passed through the function
+  return(results_list)
+}
 ```
 Experiment 1
+```{r}
+# import data
+setwd("~/lextremagam/lextremagam")
+#setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+
+sim_dat_e1 <- read_parquet(file = "data-raw/sim/data/sim_dat_e1.parquet")
+
+start_e1 <- Sys.time()
+#sim_e1_results <- peak_detect_parallel(sim_data = sim_dat_e1, logname = "sim_dat_e1_log")
+
+#adding gratia alternative
+sim_e1_results_gratia <- peak_detect_parallel(sim_data = sim_dat_e1, logname = "sim_dat_e1_log")
+
+end_e1 <- Sys.time()
+
+# toc()
+# 
+# parallel::stopCluster(cl = my.cluster)
+
+write_parquet(sim_e1_results$peaktest_results, sink =  "data-raw/sim/results/peaktest_results_e1.parquet")
+write_parquet(sim_e1_results$lextrema_results, sink =  "data-raw/sim/results/lextrema_results_e1.parquet")
+write_parquet(sim_e1_results$gam_params, sink =  "data-raw/sim/results/gam_params_e1.parquet")
+
+
+```
+
 ```{r}
 # import data
 setwd("~/lextremagam/lextremagam")
@@ -215,7 +345,7 @@ sim_dat_e1 <- read_parquet(file = "data-raw/sim/data/sim_dat_e1.parquet")
 # #clusterExport(my.cluster, c("peaktest_scam", "peaktest_quad", "peaktest_twolines", "reg2"))
 # tic()
 start_e1 <- Sys.time()
-sim_e1_results <- peak_detect_parallel(sim_data = sim_dat_e1, logname = "sim_dat_e1_log")
+sim_e1_results <- peak_detect_gratia(sim_data = sim_dat_e1, logname = "sim_dat_e1_gratia_log")
 #test_results <- peak_detect_parallel(sim_data = test_data, logname = "test_log")
 end_e1 <- Sys.time()
 
@@ -223,13 +353,11 @@ end_e1 <- Sys.time()
 # 
 # parallel::stopCluster(cl = my.cluster)
 
-write_parquet(sim_e1_results$peaktest_results, sink =  "data-raw/sim/results/peaktest_results_e1.parquet")
-write_parquet(sim_e1_results$lextrema_results, sink =  "data-raw/sim/results/lextrema_results_e1.parquet")
-write_parquet(sim_e1_results$gam_params, sink =  "data-raw/sim/results/gam_params_e1.parquet")
+write_parquet(sim_e1_results$lextrema_results, sink =  "data-raw/sim/results/lextrema_gratia_results_e1.parquet")
+write_parquet(sim_e1_results$gam_params, sink =  "data-raw/sim/results/gam_params_gratia_e1.parquet")
 
 
 ```
-
 
 ```{r}
 ```
