--- a/vignettes/S02-run_sims.Rmd
+++ b/vignettes/S02-run_sims.Rmd
@@ -314,9 +314,9 @@ end_e1 <- Sys.time()
 # 
 # parallel::stopCluster(cl = my.cluster)
 
-write_parquet(sim_e1_results$peaktest_results, sink =  "data-raw/sim/results/peaktest_results_e1.parquet")
-write_parquet(sim_e1_results$lextrema_results, sink =  "data-raw/sim/results/lextrema_results_e1.parquet")
-write_parquet(sim_e1_results$gam_params, sink =  "data-raw/sim/results/gam_params_e1.parquet")
+write_parquet(sim_e1_results_gratia$lextrema_results, sink =  "data-raw/sim/results/lextrema_gratia_results_e1.parquet")
+write_parquet(sim_e1_results_gratia$gam_params, sink =  "data-raw/sim/results/gam_params_gratia_e1.parquet")
+
 
 
 ```
@@ -353,8 +353,10 @@ end_e1 <- Sys.time()
 # 
 # parallel::stopCluster(cl = my.cluster)
 
-write_parquet(sim_e1_results$lextrema_results, sink =  "data-raw/sim/results/lextrema_gratia_results_e1.parquet")
-write_parquet(sim_e1_results$gam_params, sink =  "data-raw/sim/results/gam_params_gratia_e1.parquet")
+
+write_parquet(sim_e1_results$peaktest_results, sink =  "data-raw/sim/results/peaktest_results_e1.parquet")
+write_parquet(sim_e1_results$lextrema_results, sink =  "data-raw/sim/results/lextrema_results_e1.parquet")
+write_parquet(sim_e1_results$gam_params, sink =  "data-raw/sim/results/gam_params_e1.parquet")
 
 
 ```
