--- a/vignettes/S02-run_sims.Rmd
+++ b/vignettes/S02-run_sims.Rmd
@@ -41,7 +41,7 @@ library(purrr)#import data to run gams
 
 ```{r}
 
-peak_detect_parallel <- function(sim_data, logname){ 
+run_analyses <- function(sim_data, logname){ 
   sim_data <- sim_data
   #using the user-defined logname to set up a new parallel processing logging file
   log_file <- paste0("data-raw/sim/analysis_logs/", logname, ".txt")
@@ -61,17 +61,15 @@ peak_detect_parallel <- function(sim_data, logname){
       filter(sample_id==i)
     x <- test_data$x
     y <- test_data$y
-   cat(paste0(Sys.time(), "Sample ID,", i,  ",Sample size,", nrow(test_data), ",", length(x), ",", length(y), "\n" ), file=log_file, append=TRUE)
-
     
+   cat(paste0(Sys.time(), "Data subset,", "Sample ID,", i,  ",Sample size,", nrow(test_data), "\n" ), file=log_file, append=TRUE)
     
     #quadratic regression ####
     tic()
     quad_results <- lextremagam:::peaktest_quad(x=x, y=y)
     #returns a numerical value u (boolean significance) under the criteria 
     #"if (!is.na(jn1) & !is.na(jn2)) if (jn1>min(x) & jn1<max(x) & jn2>min(x) & jn2<max(x) & jn1>jn2) u=1
-    #FIGURE OUT HOW TO UNDERSTAND THIS
-    
+
     # two_lines (2-1 c)  ####
     twolines_results <- lextremagam:::peaktest_twolines(x=x, y=y)
     # returns boolean u significance for 3 different rHood methods and 3lines test
@@ -104,9 +102,8 @@ peak_detect_parallel <- function(sim_data, logname){
     #quantify local extrema
       #fit gam
       tic()
-              cat(paste0(Sys.time(), 
-                   ", Just before running gam", "\n" ),
-        file=log_file, append=TRUE)
+      cat(paste0(Sys.time(),  ", Just before running gam", "\n" ), 
+          file=log_file, append=TRUE)
               
       sim_gam <- gam(y ~ s(x, bs="ad", m=3), 
                            method = "REML", 
@@ -116,11 +113,7 @@ peak_detect_parallel <- function(sim_data, logname){
                    ",", i, ", Gam ran. Gam object size: ", length(sim_gam), "\n" ),
         file=log_file, append=TRUE)
                     
-      summary_sim_gam <- summary(sim_gam)
-      
-    cat(paste0(Sys.time(), 
-                   ",", i, ", Gam summary ran. Gam object size: ", length(summary_sim_gam), "\n" ),
-        file=log_file, append=TRUE)
+    summary_sim_gam <- summary(sim_gam)
     
       sim_gam_params <- as.data.frame(cbind(i,
                               sim_gam$aic, 
@@ -134,39 +127,52 @@ peak_detect_parallel <- function(sim_data, logname){
                               summary_sim_gam$dev.expl)) #deviance explained) 
       names(sim_gam_params) <- c("sample_id", "aic", "converged", "n_iter", "residual_df", "chis_sq", "r_sq_adj", "p_smooth", "edf", "dev_expl")
     
-          cat(paste0(Sys.time(), 
-                   ",", i, ", Params grouped: number of columns", ncol(sim_gam_params), "\n" ),
+     cat(paste0(Sys.time(), ",", i, ", Params grouped: number of columns", ncol(sim_gam_params), "\n" ),
         file=log_file, append=TRUE)
           
-      #Finding lextrema
-      lextrema_summary <- lextremagam::quantify_lextrema(mod = sim_gam, 
+    #Finding lextrema
+      #with marginaleffects
+      lextrema_summary_me <- lextremagam::quantify_lextrema(mod = sim_gam,
                                            var = "x", 
                                            step_size = 0.0005, 
-                                           conf_level = 0.95) #may be too small (a 100 th)
+                                           conf_level = 0.95,
+                                           deriv_method = "marginaleffects") 
       
-                cat(paste0(Sys.time(), 
-                   ",", i, ", quantify_lextrema_ran", length(lextrema_summary), "\n" ),
+       cat(paste0(Sys.time(),  ",", i, ", quantify_lextrema_ran_me", length(lextrema_summary_me), "\n" ),
         file=log_file, append=TRUE)
                 
-      lextrema_summary$segment_summary$sample_id <- i
-      
-            cat(paste0(Sys.time(), 
-                   ",", i, ", added sample_id ", i , " to lextrema summary.\n" ),
-        file=log_file, append=TRUE)
+      lextrema_summary_me$segment_summary$sample_id <- i
             
       time_lextrema <- toc()
       
       cat(paste0(Sys.time(), 
                  ",lextrema analysis complete,", "Sample ID,", i,  ",Duration of lextrema analysis,", time_lextrema, "\n" ),
         file=log_file, append=TRUE)
+      
+      #with gratia
+      lextrema_summary_gr <- lextremagam::quantify_lextrema(mod = sim_gam,
+                                           var = "x", 
+                                           step_size = 0.0005, 
+                                           conf_level = 0.95,
+                                           deriv_method = "gratia") 
+      
+       cat(paste0(Sys.time(),  ",", i, ", quantify_lextrema_ran_gr", length(lextrema_summary_gr), "\n" ),
+        file=log_file, append=TRUE)
+                
+      lextrema_summary_gr$segment_summary$sample_id <- i
+            
+      time_lextrema <- toc()
+      
+      cat(paste0(Sys.time(),",lextrema analysis complete,", "Sample ID,", i,  ",Duration of lextrema analysis,", time_lextrema, "\n" ),
+        file=log_file, append=TRUE)
               
     results <- list(sample_id = i, 
                     peaktest_results = peaktest_results,
                     gam_params = sim_gam_params, 
-                    lextrema_results = lextrema_summary$segment_summary)
+                    lextrema_results_me = lextrema_summary_me$segment_summary,
+                    lextrema_results_gr = lextrema_summary_gr$segment_summary)
     #returing concatenated analysis results for sample ID=i
     gc()
-    #saveRDS(results, file = "data-raw/sim/results")
     return(results)
   }
 
@@ -175,148 +181,74 @@ peak_detect_parallel <- function(sim_data, logname){
       peaktest_results <- do.call(rbind, peaktest_results_list)
       
   #rowbinding all lextrema results
-      lextrema_results_list <- map(sim_dat_detect_results_list, ~ .x$lextrema_results)
-      lextrema_results <- do.call(rbind, lextrema_results_list)
+      lextrema_results_list_me <- map(sim_dat_detect_results_list, ~ .x$lextrema_results_me)
+      lextrema_results_me <- do.call(rbind, lextrema_results_list_me)
+      
+      lextrema_results_list_gr <- map(sim_dat_detect_results_list, ~ .x$lextrema_results_gr)
+      lextrema_results_gr <- do.call(rbind, lextrema_results_list_gr)
       
   #rowbinding all gam parameters
       gam_params_list <- map(sim_dat_detect_results_list, ~ .x$gam_params)
       gam_params <- do.call(rbind, gam_params_list)
       
   results_list <- list(peaktest_results = peaktest_results,
-                       lextrema_results = lextrema_results,
-                       gam_params = gam_params)
-  
-  #returing results for all samples in sim_data passed through the function
-  return(results_list)
-}
-
-peak_detect_gratia <- function(sim_data, logname){ 
-  sim_data <- sim_data
-  #using the user-defined logname to set up a new parallel processing logging file
-  log_file <- paste0("data-raw/sim/analysis_logs/", logname, ".txt")
-  file.create(log_file)
-  
-  start_time <- as.numeric(Sys.time())
-  
-  #Parallel processing using the sim_data passed in the function
-  sim_dat_detect_results_list <- foreach (i = unique(sim_data$sample_id), #iterating for each ID number
-                                          .packages=c('dplyr', 'R.utils','pracma', "mgcv", "lextremagam", "marginaleffects"))%do% {
-                                            
-#merges list output into a dataframe, where each iteration output is a row
-                                            
-    cat(paste0(Sys.time(), ",Iteration Start,", "Sample ID,", i,  ",Time since foreach loop start,", as.numeric(Sys.time())-start_time, "\n" ), file=log_file, append=TRUE)
-     # selecting only the test data for iteration i ####
-    test_data <- sim_data%>%
-      filter(sample_id==i)
-    x <- test_data$x
-    y <- test_data$y
-   cat(paste0(Sys.time(), "Sample ID,", i,  ",Sample size,", nrow(test_data), ",", length(x), ",", length(y), "\n" ), file=log_file, append=TRUE)
-   
-    #quantify local extrema
-      #fit gam
-      tic()
-              
-      sim_gam <- gam(y ~ s(x, bs="ad", m=3), 
-                           method = "REML", 
-                           data = test_data)
-      
-                    cat(paste0(Sys.time(), 
-                   ",", i, ", Gam ran. Gam object size: ", length(sim_gam), "\n" ),
-        file=log_file, append=TRUE)
-                    
-      summary_sim_gam <- summary(sim_gam)
-      
-    cat(paste0(Sys.time(), 
-                   ",", i, ", Gam summary ran. Gam object size: ", length(summary_sim_gam), "\n" ),
-        file=log_file, append=TRUE)
-    
-      sim_gam_params <- as.data.frame(cbind(i,
-                              sim_gam$aic, 
-                              sim_gam$converged,
-                              sim_gam$outer.info$iter,
-                              summary_sim_gam$residual.df,
-                              summary_sim_gam$chi.sq,
-                              summary_sim_gam$r.sq,
-                              summary_sim_gam$s.table[[4]],#Smooth p-value
-                              summary_sim_gam$edf,    #edf
-                              summary_sim_gam$dev.expl)) #deviance explained) 
-      names(sim_gam_params) <- c("sample_id", "aic", "converged", "n_iter", "residual_df", "chis_sq", "r_sq_adj", "p_smooth", "edf", "dev_expl")
-    
-          cat(paste0(Sys.time(), 
-                   ",", i, ", Params grouped: number of columns", ncol(sim_gam_params), "\n" ),
-        file=log_file, append=TRUE)
-          
-      #Finding lextrema
-      lextrema_summary <- lextremagam::quantify_lextrema(mod = sim_gam,
-                                           var = "x", 
-                                           step_size = 0.0005, 
-                                           conf_level = 0.95, 
-                                           deriv_method = "gratia") #may be too small (a 100 th)
-      
-                cat(paste0(Sys.time(), 
-                   ",", i, ", quantify_lextrema_gratia_ran", length(lextrema_summary), "\n" ),
-        file=log_file, append=TRUE)
-                
-      lextrema_summary$segment_summary$sample_id <- i
-      
-            cat(paste0(Sys.time(), 
-                   ",", i, ", added sample_id ", i , " to lextrema summary.\n" ),
-        file=log_file, append=TRUE)
-            
-      time_lextrema <- toc()
-      
-      cat(paste0(Sys.time(), 
-                 ",lextrema analysis complete,", "Sample ID,", i,  ",Duration of lextrema analysis,", time_lextrema, "\n" ),
-        file=log_file, append=TRUE)
-              
-    results <- list(sample_id = i, 
-                    gam_params = sim_gam_params, 
-                    lextrema_results = lextrema_summary$segment_summary)
-    #returing concatenated analysis results for sample ID=i
-    gc()
-    #saveRDS(results, file = "data-raw/sim/results")
-    return(results)
-  }
-      
-  #rowbinding all lextrema results
-      lextrema_results_list <- map(sim_dat_detect_results_list, ~ .x$lextrema_results)
-      lextrema_results <- do.call(rbind, lextrema_results_list)
-      
-  #rowbinding all gam parameters
-      gam_params_list <- map(sim_dat_detect_results_list, ~ .x$gam_params)
-      gam_params <- do.call(rbind, gam_params_list)
-      
-  results_list <- list(                       lextrema_results = lextrema_results,
+                       lextrema_results_me = lextrema_results_me,
+                       lextrema_results_gr = lextrema_results_gr,
                        gam_params = gam_params)
   
   #returing results for all samples in sim_data passed through the function
   return(results_list)
 }
 ```
-Experiment 1
+##Experiment 1
 ```{r}
 # import data
-setwd("~/lextremagam/lextremagam")
-#setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+#setwd("~/lextremagam/lextremagam")
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
 
 sim_dat_e1 <- read_parquet(file = "data-raw/sim/data/sim_dat_e1.parquet")
 
 start_e1 <- Sys.time()
-#sim_e1_results <- peak_detect_parallel(sim_data = sim_dat_e1, logname = "sim_dat_e1_log")
-
-#adding gratia alternative
-sim_e1_results_gratia <- peak_detect_gratia(sim_data = sim_dat_e1, logname = "sim_dat_e1_gratia_log")
+sim_e1_results <- run_analyses(sim_data = sim_dat_e1, logname = "sim_dat_e1_log")
+#test <- run_analyses(sim_data = filter(sim_dat_e1, rep<=2), logname = "test")
 
 end_e1 <- Sys.time()
 
-# toc()
-# 
-# parallel::stopCluster(cl = my.cluster)
+write_parquet(sim_e1_results$lextrema_results_me, sink =  "data-raw/sim/results/lextrema_results_me_e1.parquet")
+write_parquet(sim_e1_results$lextrema_results_gr, sink =  "data-raw/sim/results/lextrema_results_gr_e1.parquet")
+write_parquet(sim_e1_results$gam_params, sink =  "data-raw/sim/results/gam_params_e1")
+write_parquet(sim_e1_results$peaktest_results, sink =  "data-raw/sim/results/peaktest_results_e1.parquet")
 
-write_parquet(sim_e1_results_gratia$lextrema_results, sink =  "data-raw/sim/results/lextrema_gratia_results_e1.parquet")
-write_parquet(sim_e1_results_gratia$gam_params, sink =  "data-raw/sim/results/gam_params_gratia_e1.parquet")
+```
+##Experiment 2
+```{r}
+# import data
+#setwd("~/lextremagam/lextremagam")
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
 
+sim_dat_e2 <- read_parquet(file = "data-raw/sim/data/sim_dat_e2.parquet")
 
+start_e2 <- Sys.time()
+sim_e2_results <- list()
+sim_e2_results$linear <- run_analyses(sim_data = filter(sim_dat_e2, func=="linear"), logname = "sim_dat_e2_linear_log")
+sim_e2_results$norm <- run_analyses(sim_data = filter(sim_dat_e2, func=="norm"), logname = "sim_dat_e2_norm_log")
+
+# test <- list()
+# test$linear <- run_analyses(sim_data = filter(sim_dat_e2, func=="linear", rep==1), logname = "sim_dat_e2_linear_log")
+# test$norm <- run_analyses(sim_data = filter(sim_dat_e2, func=="norm", rep==1), logname = "sim_dat_e2_norm_log")
+
+sim_e2_results_m <- list()
+sim_e2_results_m$lextrema_results_me <- rbind(sim_e2_results$linear$lextrema_results_me, sim_e2_results$norm$lextrema_results_me)
+sim_e2_results_m$lextrema_results_gr <- rbind(sim_e2_results$linear$lextrema_results_gr, sim_e2_results$norm$lextrema_results_gr)
+sim_e2_results_m$gam_params <- rbind(sim_e2_results$linear$gam_params, sim_e2_results$norm$gam_params)
+sim_e2_results_m$peaktest_results <- rbind(sim_e2_results$linear$peaktest_results, sim_e2_results$norm$peaktest_results)
+
+end_e1 <- Sys.time()
+
+write_parquet(sim_e2_results_m$lextrema_results_me, sink =  "data-raw/sim/results/lextrema_results_me_e2.parquet")
+write_parquet(sim_e2_results_m$lextrema_results_gr, sink =  "data-raw/sim/results/lextrema_results_gr_e2.parquet")
+write_parquet(sim_e2_results_m$gam_params, sink =  "data-raw/sim/results/gam_params_e2")
+write_parquet(sim_e2_results_m$peaktest_results, sink =  "data-raw/sim/results/peaktest_results_e2.parquet")
 
 ```
 
