--- a/vignettes/S03-analyze_sims.Rmd
+++ b/vignettes/S03-analyze_sims.Rmd
@@ -21,7 +21,7 @@ library(dplyr)
 ```
 
 ```{r}
-get_results <- function(peak_test, lextr_me, lextr_gr, gam_params, func_type_p, func_type_np){
+get_results <- function(peak_test, lextr_me, lextr_gr, gam_params, func_type_p = NULL, func_type_np = NULL){
   results <- list()
   results$power <- get_power(peak_test = peak_test, lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_p)
   results$fperror <-  get_fperror(peak_test = peak_test, lextr_me = lextr_me, lextr_gr = lextr_gr, func_type = func_type_np)
@@ -113,13 +113,15 @@ get_fperror <- function(peak_test, lextr_me, lextr_gr, func_type){
 }
 
 get_coverage <- function(lextr_me, lextr_gr, func_type){
-  coverage_me <- lextr_me%>%
+  capture_me <- lextr_me%>%
     filter(func %in% func_type)%>%
     rowwise()%>%
     mutate(capture = case_when(
-      feature %in% c("local_max", "boundary_max", "notrend") ~ (param>=x_start & param<=x_end),
+      feature %in% c("local_max", "boundary_max", "notrend") ~ (peak>=x_start & peak<=x_end),
       !( feature %in% c("local_max", "boundary_max", "notrend"))~ 0))%>%
-    ungroup()%>%
+    ungroup()
+  
+  coverage_me <- capture_me %>%
     group_by(scenario_id, func, param, error, dup, sample_id)%>%
     summarize(capture = sum(capture))%>%
     ungroup()%>%
@@ -128,13 +130,25 @@ get_coverage <- function(lextr_me, lextr_gr, func_type){
               n_me = n())%>%
     ungroup()
   
-   coverage_gr <- lextr_gr%>%
+  coverage_me_max <- capture_me %>%
+    filter(feature != "notrend")%>%
+    group_by(scenario_id, func, param, error, dup, sample_id)%>%
+    summarize(capture = sum(capture))%>%
+    ungroup()%>%
+    group_by(scenario_id, func, param, error, dup)%>%
+    summarize(coverage_me_max = sum(capture)/n(),
+              n_me_max = n())%>%
+    ungroup()
+  
+   capture_gr <- lextr_gr%>%
     filter(func %in% func_type)%>%
     rowwise()%>%
     mutate(capture = case_when(
-      feature %in% c("local_max", "boundary_max", "notrend") ~ (param>=x_start & param<=x_end),
+      feature %in% c("local_max", "boundary_max", "notrend") ~ (peak>=x_start & peak<=x_end),
       !( feature %in% c("local_max", "boundary_max", "notrend"))~ 0))%>%
-    ungroup()%>%
+    ungroup()
+   
+   coverage_gr <- capture_gr %>%
     group_by(scenario_id, func, param, error, dup, sample_id)%>%
     summarize(capture = sum(capture))%>%
     ungroup()%>%
@@ -142,9 +156,21 @@ get_coverage <- function(lextr_me, lextr_gr, func_type){
     summarize(coverage_gr = sum(capture)/n(),
               n_gr = n())%>%
     ungroup()
+   
+  coverage_gr_max <- capture_gr %>%
+    filter(feature != "notrend")%>%
+    group_by(scenario_id, func, param, error, dup, sample_id)%>%
+    summarize(capture = sum(capture))%>%
+    ungroup()%>%
+    group_by(scenario_id, func, param, error, dup)%>%
+    summarize(coverage_gr_max = sum(capture)/n(),
+              n_gr_max = n())%>%
+    ungroup()
   
   coverage <- coverage_me%>%
-    left_join( coverage_gr, by=c("scenario_id", "func", "param", "error", "dup"))
+    left_join( coverage_me_max, by=c("scenario_id", "func", "param", "error", "dup"))%>%
+    left_join( coverage_gr, by=c("scenario_id", "func", "param", "error", "dup"))%>%
+    left_join( coverage_gr_max, by=c("scenario_id", "func", "param", "error", "dup"))
   
   return(coverage)
 }
@@ -218,6 +244,8 @@ sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
   ref_metadata_e1 <- sim_dat_e1%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
     summarize(sample_id=first(sample_id))%>%
+    mutate(peak = case_when(func=="norm"~param,
+                            func == "linear"~NA))%>%
     ungroup()
 
 e1_gam_params <- read_parquet("data-raw/sim/results/gam_params_e1.parquet")
@@ -247,6 +275,8 @@ sim_dat_e2 <- read_parquet("data-raw/sim/data/sim_dat_e2.parquet")
   ref_metadata_e2 <- sim_dat_e2%>%
     group_by(func, param, rep, error, dup, scenario_id)%>%
     summarize(sample_id=first(sample_id))%>%
+        mutate(peak = case_when(func=="norm"~param,
+                            func == "linear"~NA))%>%
     ungroup()
 
 e2_gam_params <- read_parquet("data-raw/sim/results/gam_params_e2.parquet")
@@ -254,11 +284,7 @@ e2_gam_params <- full_join(ref_metadata_e2, e2_gam_params, by="sample_id")
 
 e2_lextrema_results_me <- read_parquet("data-raw/sim/results/lextrema_results_me_e2.parquet")
 e2_lextrema_results_me <- full_join(ref_metadata_e2, e2_lextrema_results_me, by="sample_id")
-e2_lextrema_results_me$feature[which(is.na(e2_lextrema_results_me$lag) &
-                                          is.na(e2_lextrema_results_me$lead)&
-                                          e2_lextrema_results_me$x_end >0.999999&
-                                          e2_lextrema_results_me$x_start<0.0000001&
-                                          e2_lextrema_results_me$slope_sign ==0)] <- "notrend"
+e2_lextrema_results_me$feature[which(is.na(e2_lextrema_results_me$feature))] <- "notrend"
 
 e2_lextrema_results_gratia <- read_parquet("data-raw/sim/results/lextrema_results_gr_e2.parquet")
 e2_lextrema_results_gratia <- full_join(ref_metadata_e2, e2_lextrema_results_gratia, by="sample_id")
@@ -273,8 +299,53 @@ e2_summary <- get_results(peak_test = e2_peaktest_results,
                           func_type_p = "norm", 
                           func_type_np = "linear")
 ```
-
+#Experiment 3 ####
 ```{r}
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+sim_dat_e3 <- read_parquet("data-raw/sim/data/sim_dat_e3.parquet")
+  #adding reference data
+  ref_metadata_e3 <- sim_dat_e3%>%
+    group_by(func, param, rep, error, dup, scenario_id)%>%
+    summarize(sample_id=first(sample_id))%>%
+    mutate(peak = case_when(func == "var-p-location" ~ param,
+                            func == "var-p-skew" ~ (param*10-1)/(param*10+(10-param*10)-2),
+                            func== "var-p-width" ~ 0.5))%>%
+    ungroup()
+
+e3_gam_params <- read_parquet("data-raw/sim/results/gam_params_e3.parquet")
+e3_gam_params <- full_join(ref_metadata_e3, e3_gam_params, by="sample_id")
+
+e3_lextrema_results_me <- read_parquet("data-raw/sim/results/lextrema_results_me_e3.parquet")
+e3_lextrema_results_me <- full_join(ref_metadata_e3, e3_lextrema_results_me, by="sample_id")
+
+e3_lextrema_results_gratia <- read_parquet("data-raw/sim/results/lextrema_results_gr_e3.parquet")
+e3_lextrema_results_gratia <- full_join(ref_metadata_e3, e3_lextrema_results_gratia, by="sample_id")
+
+e3_peaktest_results <- read_parquet("data-raw/sim/results/peaktest_results_e3.parquet")
+ 
+e3_summary <- get_results(peak_test = e3_peaktest_results,
+                          lextr_me =e3_lextrema_results_me, 
+                          lextr_gr =  e3_lextrema_results_gratia, 
+                          gam_params = e3_gam_params, 
+                          func_type_p = c("var-p-location", "var-p-skew","var-p-width" ),
+                          func_type_np = NULL)
+
+e3_coverage_long <- tidyr::pivot_longer(data=e3_summary$coverage, cols = c("coverage_me", "coverage_me_max", "coverage_gr", "coverage_gr_max"), names_to = "cov_type", values_to = "coverage")
+
+#boundary maxes are skewed to the bound???
+ggplot(data=e3_coverage_long)+
+  geom_line(aes(x=param, y=coverage, colour=cov_type))+
+  geom_hline(aes(yintercept = 0.95), colour="firebrick", linetype=2)+
+  facet_grid(dup~func)+
+  theme_bw()
+
+#boundary maxes are skewed to the bound??? Example:
+gam_e3_5 <- gam(y~s(x, bs= "ad", m=3), method = "REML", data=filter(sim_dat_e3, sample_id ==5))
+lextrema_e3_5 <- lextremagam::quantify_lextrema(gam_e3_5, var = "x", deriv_method = "gratia")
+plot_e3_5 <- lextremagam::plot_lextrema(lextrema_e3_5, plot_deriv = TRUE, show_segs = TRUE, show_segs_deriv = TRUE)
+plot_e3_5$model_plot+
+  geom_point(data=filter(sim_dat_e3, sample_id ==5), aes(x=x, y=y))+
+  geom_line(data=filter(sim_dat_e3, sample_id ==5), aes(x=x, y=y_true))
 ```
 
 ```{r}
